--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/europhia"
+        android:icon="@drawable/golden"
         android:label="tikaAPK"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
